Elastic Search and Image upload Implementation
